optimize docker file and add some text why is that good